--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- SEO tools -->
-    <title>Elina Bot</title>
-    <meta name="description" content="Elina is a Multi-purpose discord bot, with constant updates and active community. She will make sure you'll have a great time using her!">
+    <title>Zero Two Bot</title>
+    <meta name="description" content="Zero Two is a Multi-purpose discord bot, with constant updates and active community. She will make sure you'll have a great time using her!">
     <meta name="keywords" content="discord bot">
     <!--Add additional SEO meta data here!-->
 
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Elina Bot"/>
-    <meta property="og:url" content="https://discord.gg/Ecy6WpEZsD"/>
-    <meta property="og:image" content="https://images-ext-1.discordapp.net/external/xI8qpaUqhLswLVhFkX334qg-x766Uti_uBQJP7FY0As/%3Fsize%3D256/https/cdn.discordapp.com/avatars/842397001954230303/557d99168d42b845750241d8d7cd0f5b.png"/>
+    <meta property="og:title" content="Zero Two Bot"/>
+    <meta property="og:url" content="https://dsc.gg/zerotwo"/>
+    <meta property="og:image" content="https://cdn.discordapp.com/attachments/890296201151402075/941649792952573952/IMG_0030.jpg"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Elina is a Multi-purpose discord bot, with constant updates and active community. She will make sure you'll have a great time using her!"/>
+    <meta property="og:description" content="Zero Two is a Multi-purpose discord bot, with constant updates and active community. She will make sure you'll have a great time using her!"/>
 
   </head>
   <body class="bg-dark">
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="index.html"><b>Elina</b></a>
+            <a class="navbar-brand" href="index.html"><b>Zero Two</b></a>
         
             <!-- Bootstrap Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -55,11 +55,11 @@
                 <ul class="navbar-nav">
                     <!-- This link invites Criz, Change the client id to your bot's id -->
                     <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://discord.com/api/oauth2/authorize?client_id=842397001954230303&permissions=1515552374487&scope=bot%20applications.commands">Invite</a>
+                    <a class="nav-link" target="_blank" href="https://discord.com/api/oauth2/authorize?client_id=890289263210528778&permissions=1515552374487&scope=bot%20applications.commands">Invite</a>
                     </li>
                     <!-- Change link to your support server link -->
                     <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://discord.gg/Ecy6WpEZsD">Support Server</a>
+                    <a class="nav-link" target="_blank" href="https://dsc.gg/arcana">Support Server</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="commands.html">Commands</a>
@@ -74,7 +74,7 @@
 
     <div class="container container-1">
         <div class="row">
-            <h1 class="brand-line"><b>Elina Bot Website!</b></h1>
+            <h1 class="brand-line"><b>Zero Two Bot Website!</b></h1>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
@@ -82,9 +82,9 @@
                     <div class="card-body">
                       <img class="card-img-top" src="asset/image1.png" alt="Bot Invite" style="width:100%">
                       <h4 class="card-title big-text">Invite Bot</h4>
-                      <p class="card-text">Invite Elina and spice up your server with amazing fun commands !</p>
+                      <p class="card-text">Invite Zero Two and spice up your server with amazing fun commands !</p>
                       <!-- This link invites Criz, Change the client id to your bot's id -->
-                      <a href="https://top.gg/bot/842397001954230303" class="btn btn-discord btn-block stretched-link">Invite Bot</a>
+                      <a href="https://top.gg/bot/890289263210528778" class="btn btn-discord btn-block stretched-link">Invite Bot</a>
                     </div>
                 </div>
             </div>
@@ -102,9 +102,9 @@
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <img class="card-img-top" src="asset/image3.gif" alt="Commands" style="width:100%">
+                      <img class="card-img-top" src="asset/image3.png" alt="Commands" style="width:100%">
                       <h4 class="card-title big-text">Bot Commands</h4>
-                      <p class="card-text">View a full list of Commands for Elina bot on our command list page!</p>
+                      <p class="card-text">View a full list of Commands for Zero Two bot on our command list page!</p>
                       <a href="commands.html" class="btn btn-discord btn-block stretched-link">View Commands</a>
                     </div>
                 </div>
@@ -122,8 +122,8 @@
                     <div class="card-body">
                       <h4 class="card-title big-text">Slash commands</h4>
                       <p class="card-text">
-                        Finally added slash commands to elina. This is a new feature so bugs / errors can be there. <br>
-                        Got accepted on top.gg. Planning to verify the bot on discord soon. <br> Thank you !</p>
+                        Finally added slash commands to zero two. This is a new feature so bugs / errors can be there. <br>
+                        Still waiting for top.gg verification. <br> Thank you !</p>
                       <!-- <a href="update-logs.html" class="btn btn-discord btn-block stretched-link">Update Logs</a> -->
                     </div>
                 </div>
@@ -136,9 +136,9 @@
                         <h4 class="card-title big-text">Credits</h4>
                             <p class="card-text">
                                 I would like to thank all the people who helped me with the bot design , tesing and development. <br><br>
-                                Thanks <span style="color: #328bf1">Charls#3047</span> for helping me with the bot design, banners , etc. <br>
-                                Thanks <span style="color: #328bf1">Mr.Electronic#1825</span> for helping me with the bot testing , bug hunting and sheer grind. <br>
-                                Thanks <span style="color: #328bf1">MiaMili#2057</span> & <span style="color: #328bf1">loafy#0101</span> for helping me with the bot testing , bug hunting and for suggesting new ideas. <br>
+                                Thanks <span style="color: #328bf1">𝚝𝚊𝚔𝚎𝚜𝚑𝚒#4578</span> for helping me with the bot design, banners , etc. <br>
+                                Thanks <span style="color: #328bf1">0_0#6666</span> for helping me with the bot testing , bug hunting and sheer grind. <br>
+                                Thanks <span style="color: #328bf1">Riku#5721</span> & <span style="color: #328bf1">Blake#0071</span> for helping me with the bot testing , bug hunting and for suggesting new ideas. <br>
                             </p>
                       <!-- <a href="update-logs.html" class="btn btn-discord btn-block stretched-link">Update Logs</a> -->
                     </div>
@@ -156,7 +156,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <h4 class="card-title big-text">Bot Updates</h4>
+                      <h4 class="card-title big-text">Zero Two Updates</h4>
                       <p class="card-text">View the latest Update Logs here...</p>
                       <a href="update-logs.html" class="btn btn-discord btn-block stretched-link">Update Logs</a>
                     </div>
@@ -167,9 +167,9 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <h4 class="card-title big-text">View Snippets from Criz on Github!</h4>
-                      <p class="card-text">I have a couple of snippets available to help your bot - view them here!</p>
-                      <a href="https://github.com/crizmo" class="btn btn-discord btn-block stretched-link">View Snippets</a>
+                      <h4 class="card-title big-text">Zero Two API</h4>
+                      <p class="card-text">I have a couple of endpoints available to help your bot - view them here!</p>
+                      <a href="https://xenondevz.github.io/zerotwo/" class="btn btn-discord btn-block stretched-link">Coming Soon</a>
                     </div>
                 </div>
             </div>
@@ -178,7 +178,7 @@
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <h4 class="card-title big-text">Elina bot revamp</h4>
+                      <h4 class="card-title big-text">Zero Two bot revamp</h4>
                       <p class="card-text">Updated help commands for each category , added buttons. Changed economy system completely , added shop and streaks.</p>
                       <a href="commands.html" class="btn btn-discord btn-block stretched-link">Help Commands</a>
                     </div>
@@ -190,7 +190,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://crizmo.github.io/port-web/index.html"><b>&#169; 2022 | Criz</b></a>
+            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2022 | Xenon</b></a>
         </div>
     </nav>
 
