--- a/commands.html
+++ b/commands.html
@@ -25,7 +25,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 
     <!-- SEO tools -->
-    <title>Commands | Elina Bot Website</title>
+    <title>Commands | Zero Two Bot Website</title>
     <meta name="description" content="WEBSITE DESCRIPTION HERE!">
     <meta name="keywords" content="WEBSITE KEYWORDS HERE!">
     <!--Add additional SEO meta data here!-->
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://discord.gg/Ecy6WpEZsD"/>
     <meta property="og:image" content=""/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Elina bot official website!"/>
+    <meta property="og:description" content="Zero Two bot official website!"/>
 
   </head>
   <body class="bg-dark">
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="index.html"><b>Elina</b></a>
+            <a class="navbar-brand" href="index.html"><b>Zero Two</b></a>
         
             <!-- Bootstrap Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -224,7 +224,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://crizmo.github.io/port-web/index.html"><b>&#169; 2022 | Criz</b></a>
+            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2022 | Xenon</b></a>
         </div>
     </nav>
     
