--- a/update-logs.html
+++ b/update-logs.html
@@ -35,7 +35,7 @@
     <meta property="og:url" content="https://discord.gg/Ecy6WpEZsD"/>
     <meta property="og:image" content=""/>
     <meta property="og:type" content="website"/>
-    <meta property="og:description" content="Elina bot official website!"/>
+    <meta property="og:description" content="Zero Two bot official website!"/>
 
   </head>
   <body class="bg-dark">
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="index.html"><b>Elina</b></a>
+            <a class="navbar-brand" href="index.html"><b>Zero Two</b></a>
         
             <!-- Bootstrap Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -91,7 +91,7 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Version 1.0.0</h4>
                             <!-- Version Description -->
-                            <p class="card-text">Updated Elina from v12 to v13 , bug fixes & new info / help commands</p>
+                            <p class="card-text">Updated Zero Two from v12 to v13 , bug fixes & new info / help commands</p>
                             <!--Update Date and Time -->
                             <p class="date">02:13 JST | 13/10/2021</p>
                             </div>
@@ -107,7 +107,7 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Version 1.0.1</h4>
                             <!-- Version Description -->
-                            <p class="card-text">Updated Elina bot help commands, Fixed economy commands - new system , Added genshin impact stats commands</p>
+                            <p class="card-text">Updated Zero Two bot help commands, Fixed economy commands - new system , Added genshin impact stats commands</p>
                             <!--Update Date and Time -->
                             <p class="date">18:07 JST | 17/11//2021</p>
                             </div>
@@ -123,7 +123,7 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Version 2.0.0</h4>
                             <!-- Version Description -->
-                            <p class="card-text">Added commands :- aki , ds docs , qr code , new help commands. Almost done with genshin codes <br>Also Big new - Elina is now on top.gg</p>
+                            <p class="card-text">Added commands :- aki , ds docs , qr code , new help commands. Almost done with genshin codes</p>
                             <!--Update Date and Time -->
                             <p class="date">21:00 JST | 07/01//2022</p>
                             </div>
@@ -139,7 +139,7 @@
                             <!-- Version -->
                             <h4 class="card-title big-text">Version 2.0.1</h4>
                             <!-- Version Description -->
-                            <p class="card-text">Added slash commands to Elina , Bug fixes , stable hosting</p>
+                            <p class="card-text">Added slash commands to Zero Two , Bug fixes , stable hosting</p>
                             <!--Update Date and Time -->
                             <p class="date">19:00 JST | 18/01//2022</p>
                             </div>
@@ -164,7 +164,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://crizmo.github.io/port-web/index.html"><b>&#169; 2022 | Criz</b></a>
+            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2022 | Xenon</b></a>
         </div>
     </nav>
     
