--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <div class="card bg-grey" style="width:100%">
                     <div class="card-body">
-                      <img class="card-img-top" src="asset/image2.png" alt="Support Server" style="width:100%">
+                      <img class="card-img-top" src="asset/image2.jpg" alt="Support Server" style="width:100%">
                       <h4 class="card-title big-text">Support Server</h4>
                       <p class="card-text">Join our support server for help setting up the bot and to report bugs...</p>
                       <!-- Change link to your support server link -->
@@ -100,9 +100,9 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
-                <div class="card bg-grey" style="width:100%">
+                <div class="card bg-grey style="width:100%">
                     <div class="card-body">
-                      <img class="card-img-top" src="asset/image3.png" alt="Commands" style="width:100%">
+                      <img class="card-img-top" src="asset/image3.jpg" alt="Commands" style="width:100%">
                       <h4 class="card-title big-text">Bot Commands</h4>
                       <p class="card-text">View a full list of Commands for Zero Two bot on our command list page!</p>
                       <a href="commands.html" class="btn btn-discord btn-block stretched-link">View Commands</a>
