--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                       <h4 class="card-title big-text">Invite Bot</h4>
                       <p class="card-text">Invite Zero Two and spice up your server with amazing fun commands !</p>
                       <!-- This link invites Criz, Change the client id to your bot's id -->
-                      <a href="https://top.gg/bot/890289263210528778" class="btn btn-discord btn-block stretched-link">Invite Bot</a>
+                      <a href="https://discord.com/api/oauth2/authorize?client_id=890289263210528778&permissions=1515552374487&scope=bot%20applications.commands" class="btn btn-discord btn-block stretched-link">Invite Bot</a>
                     </div>
                 </div>
             </div>
@@ -95,7 +95,7 @@
                       <h4 class="card-title big-text">Support Server</h4>
                       <p class="card-text">Join our support server for help setting up the bot and to report bugs...</p>
                       <!-- Change link to your support server link -->
-                      <a href="https://discord.gg/Ecy6WpEZsD" class="btn btn-discord btn-block stretched-link">Join our Support Server</a>
+                      <a href="https://dsc.gg/arcana" class="btn btn-discord btn-block stretched-link">Join our Support Server</a>
                     </div>
                 </div>
             </div>
