--- a/update-logs.html
+++ b/update-logs.html
@@ -55,11 +55,11 @@
                 <ul class="navbar-nav">
                     <!-- This link invites Criz, Change the client id to your bot's id -->
                     <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://discord.com/oauth2/authorize?client_id=842397001954230303&permissions=0&scope=bot">Invite to Server</a>
+                    <a class="nav-link" target="_blank" href="https://discord.com/api/oauth2/authorize?client_id=890289263210528778&permissions=1515552374487&scope=bot%20applications.commands">Invite to Server</a>
                     </li>
                     <!-- Change link to your support server link -->
                     <li class="nav-item">
-                    <a class="nav-link" target="_blank" href="https://discord.gg/Ecy6WpEZsD">Support Server</a>
+                    <a class="nav-link" target="_blank" href="https://dsc.gg/arcana">Support Server</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="commands.html">Commands</a>
