--- a/commands.html
+++ b/commands.html
@@ -224,7 +224,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2022 Zero Two</b></a>
+            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2022 | Zero Two</b></a>
         </div>
     </nav>
     
