--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--Add additional SEO meta data here!-->
 
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Zero Two Bot"/>
+    <meta property="og:title" content="Zero Two Bot - Kurt Bauatista"/>
     <meta property="og:url" content="https://dsc.gg/zerotwo"/>
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/890296201151402075/941649792952573952/IMG_0030.jpg"/>
     <meta property="og:type" content="website"/>
