--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--Add additional SEO meta data here!-->
 
     <!-- Open Graph tags -->
-    <meta property="og:title" content="Zero Two Bot - Kurt Bauatista"/>
+    <meta property="og:title" content="Zero Two Bot"/>
     <meta property="og:url" content="https://dsc.gg/zerotwo"/>
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/890296201151402075/941649792952573952/IMG_0030.jpg"/>
     <meta property="og:type" content="website"/>
@@ -74,7 +74,7 @@
 
     <div class="container container-1">
         <div class="row">
-            <h1 class="brand-line"><b>Zero Two Bot Website!</b></h1>
+            <h1 class="brand-line"><b>Zero Two Discord Bot</b></h1>
         </div>
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
@@ -190,7 +190,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2022 | Zero Two</b></a>
+            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2024 | Kurt Xierick Bautista</b></a>
         </div>
     </nav>
 
