--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="index.html"><b>Zero Two by Kurt Xierick Bautista</b></a>
+            <a class="navbar-brand" href="index.html"><b>Zero Two Bot</b></a>
         
             <!-- Bootstrap Toggler/collapsibe Button -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -190,7 +190,7 @@
     <nav class="navbar navbar-expand-md bg-discord navbar-dark justify-content-center">
         <div class="container">
             <!-- Bot/Brand Name -->
-            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2024 | Kurt Xierick Bautista</b></a>
+            <a class="navbar-brand" href="https://discord.com/users/801087340361285673"><b>&#169; 2024 | Xenon#</b></a>
         </div>
     </nav>
 
